--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,6 +87,7 @@
     <string name="profile">Profile</string>
     <string name="recovery">Recovery</string>
     <string name="initd">Init.d</string>
+    <string name="about">About</string>
     <string name="settings">Settings</string>
 
     <!-- Overall -->
@@ -629,7 +630,6 @@
 
     <!-- Downloads -->
     <string name="downloads_error">Couldn\'t find any supported kernels! Please check your internet access.</string>
-    <string name="about">About</string>
     <string name="download_error">Failed to download %s.</string>
     <string name="downloading_counting">%1$s/%2$s</string>
     <string name="check_md5">Checking md5</string>
@@ -683,6 +683,10 @@
     <string name="exceute_question">Execute %s?</string>
     <string name="executing">Executing</string>
     <string name="result">Result</string>
+
+    <!-- About -->
+    <string name="about_me">Hi, I\'m Willi Ye aka Grarak, a 19 year old student living in Vienna. I\'ve been developing on Android for quite a long time. Beside Kernel Adiutor I\'m also maintaining CyanogenMod for few devices and working on ParanoidAndroid. So please understand if I don\'t find the time to update this application.</string>
+    <string name="libraries_used">Libraries used</string>
 
     <!-- Settings -->
     <string name="fahrenheit_title">Fahrenheit</string>
