--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -697,4 +697,9 @@
     <string name="fahrenheit_title">Fahrenheit</string>
     <string name="fahrenheit_summary">Use fahrenheit to measure temperature.</string>
     <string name="force_english">Force displaying english language</string>
+    <string name="ten_sec">10 seconds</string>
+    <string name="twenty_sec">20 seconds</string>
+    <string name="fifty_sec">50 seconds</string>
+    <string name="apply_on_boot_test_summary">Test apply on boot. This includes all kind of things which are getting applied during booting, such as custom controls, profiles, init.d, etc.</string>
+    <string name="nothing_apply">Nothing found to apply!</string>
 </resources>
