--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,6 +89,7 @@
     <string name="initd">Init.d</string>
     <string name="about">About</string>
     <string name="contributors">Contributors</string>
+    <string name="faq">FAQ</string>
     <string name="settings">Settings</string>
 
     <!-- Overall -->
@@ -692,6 +693,20 @@
     <!-- Contributors -->
     <string name="commits">%d commits</string>
     <string name="no_internet">Please check your internet connection!</string>
+
+    <!-- FAQ -->
+    <string name="misspelled">Why did you misspell \"Adiutor\"?</string>
+    <string name="misspelled_summary">Adiutor is Latin and means helper.</string>
+    <string name="have_to_donate">Do I have to donate in order to use those premium features?</string>
+    <string name="have_to_donate_summary">No, this application is open source. You can easily build it yourself. Donation features are enabled by default once you build a debugging apk, so no need to change any line of code.</string>
+    <string name="cpu_freq_not_sticking">Why doesn\'t my determined CPU freq stick?</string>
+    <string name="cpu_freq_not_sticking_summary">This could be due to many reasons. Many kernels nowadays have their own hotplugging system which controls the CPU frequency and CyanogenMod has their own CPU Boost implementation which regulate the frequency. I would suggest you don\'t touch the CPU frequencies and let the kernel do its job. This also counts for other functions! If they don\'t stick, it\'s because the kernel/system doesn\'t want to let you change it.</string>
+    <string name="feature_not_appearing">Why don\'t features x and y show up?</string>
+    <string name="feature_not_appearing_summary">Only features which are supported by your device are shown!</string>
+    <string name="feature_function">What does feature x do?</string>
+    <string name="feature_function_summary">If you don\'t know what this control does, then simply don\'t touch it. Please do a proper research before playing with your expensive hardware.</string>
+    <string name="add_new_features">Could you add feature x and y?</string>
+    <string name="add_new_features_summary">That\'s hard to say. I try to add all features, but it\'s hard to make this app universal for all devices.</string>
 
     <!-- Settings -->
     <string name="dark_theme">Dark theme</string>
