--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -520,6 +520,8 @@
     <string name="handset_microphone_gain">Handset Microphone Gain</string>
     <string name="cam_microphone_gain">Camcorder Microphone Gain</string>
     <string name="speaker_gain">Speaker Gain</string>
+    <string name="speaker_l_gain">Left Speaker Gain</string>
+    <string name="speaker_r_gain">Right Speaker Gain</string>
     <string name="headphone_poweramp_gain">Headphone PowerAmp Gain</string>
     <string name="headphone_tpa6165_gain">Headphone Amp Gain (TPA6165 Extension)</string>
     <string name="lock_output_gain">Lock Output Gain</string>
