ADD Full control of yank555.lu's Fast Charge
This is a full interface for our fast charge.
You can customize your AC ,USB, and Wireless charging current

/*
 * Forced Fast Charge - SysFS interface :
 * --------------------------------------
 *
 * /sys/kernel/fast_charge/force_fast_charge (rw)
 *
 *   0 - disabled (default)
 *   1 - substitute AC to USB
 *   2 - use custom mA configured through sysfs interface (see below)
 *
 * /sys/kernel/fast_charge/use_mtp_during_fast_charge (rw)
 *
 *   0 - disabled
 *   1 - enabled (default)
 *
 * /sys/kernel/fast_charge/screen_on_current_limit (rw)
 *
 *   0 - disabled
 *   1 - enabled (default)
 *
 * /sys/kernel/fast_charge/ac_charge_level (rw)
 *
 *   rate at which to charge when on AC (1.0A/h to 2.2A/h)
 *
 * /sys/kernel/fast_charge/usb_charge_level (r/w)
 *
 *   rate at which to charge when on USB (0.460A/h to 1.2A/h)
 *
 * /sys/kernel/fast_charge/wireless_charge_level (r/w)
 *
 *   rate at which to charge when on WIRELESS (0.650A/h to 1.4A/h)
 *
 * /sys/kernel/fast_charge/failsafe (rw)
 *
 *   0 - disabled - allow anything up to 2.2A/h to be used as AC / USB /  WIRELESS custom current
 *   1 - enabled  - behaviour as described above (default)
 *
 * /sys/kernel/fast_charge/ac_levels (ro)
 *
 *   display available levels for AC (for failsafe enabled mode)
 *
 * /sys/kernel/fast_charge/usb_levels (ro)
 *
 *   display available levels for USB (for failsafe enabled mode)
 *
 * /sys/kernel/fast_charge/wireless_levels (ro)
 *
 *   display available levels for WIRELESS (for failsafe enabled mode)
 *
 */

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -560,6 +560,28 @@
     <string name="charge_rate">Charge Rate</string>
     <string name="charging_current">Charging Current</string>
     <string name="charging_current_summary">Set charging current. Caution: Exceeding 1250mA may damage your charging driver.</string>
+    <string name="charge_levels">Charge Levels Interface</string>
+    <string name="charge_levels_summary">Setting levels higher than your device supports can damage your device and any device it is plugged into. USE CAUTION.</string>
+    <string name="custom_charge">Custom level</string>
+    <string name="charge_level_ac">AC Charge mA</string>
+    <string name="charge_level_ac_summary">Choose your Level</string>
+    <string name="charge_level_usb">USB Charge mA</string>
+    <string name="charge_level_usb_summary">Choose your Level</string>
+    <string name="charge_level_wireless">WIRELESS Charge mA</string>
+    <string name="charge_level_wireless_summary">Choose your Level</string>
+    <string name="mtp_fast_charge">MTP During Fast Charge</string>
+    <string name="mtp_fast_charge_summary">You can choose if you want MTP during fast charge or not.</string>
+    <string name="screen_limit">Screen On Current Limit</string>
+    <string name="screen_limit_summary">Our device majorly reduces the amount of power it draws from the power supply when the screen is on. This happens with and without fast charging capable adapters.</string>
+    <string name="warning_charge">WARNING CHARGE AREA</string>
+    <string name="charging_custom_ac">Charging Current AC</string>
+    <string name="charging_current_ac_summary">Set charging current. Caution: Exceeding 2100mA may damage your equipment.</string>
+    <string name="charging_custom_usb">Charging Current USB</string>
+    <string name="charging_current_usb_summary">Set charging current. Caution: Exceeding 1000mA may damage your USB driver.</string>
+    <string name="charging_custom_wireless">Charging Current WIRELESS</string>
+    <string name="charging_current_wireless_summary">Set charging current. Caution: Exceeding 1200mA may damage your equipment.</string>
+    <string name="failsafe">Failsafe</string>
+    <string name="failsafe_summary">If disabled, you can choose your charging current that is not supported by your equipment (i have limited for secure...)</string>
 
     <!-- LED -->
     <string name="fade">Fade</string>
